manifest/fnal/ingest.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingest-deployment
  labels:
    app: ingest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingest
  template:
    metadata:
      labels:
        app: ingest
    spec:
      containers:
        - name: restapi
          image: "imageregistry.fnal.gov:443/objectservice/ingest:dev"
          imagePullPolicy: Always
          resources:  # TODO: tune
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "1"
