manifest/fnal/rabbitmq.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  selector:
    app: rabbitmq
  ports:
    - name: aqmp
      protocol: TCP
      port: 5672
      targetPort: 5672
    - name: http
      protocol: TCP
      port: 15672
      targetPort: 15672
---
# TODO: use statefulset with PVCs instead https://blog.rabbitmq.com/posts/2020/08/deploying-rabbitmq-to-kubernetes-whats-involved/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment
  labels:
    app: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: "rabbitmq:3.12-management"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:  # TODO: tune
            requests:
              memory: "128Mi"
              cpu: "200m"
            limits:
              memory: "1Gi"
              cpu: "1"
          livenessProbe:
            exec:
              command: ["rabbitmq-diagnostics", "check_running"]
            initialDelaySeconds: 10
            periodSeconds: 60
            timeoutSeconds: 10
          readinessProbe:
            exec: 
              command: ["rabbitmq-diagnostics", "check_local_alarms"]
            initialDelaySeconds: 20
            periodSeconds: 60
            timeoutSeconds: 10
