manifest/fnal/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restapi-ingress
spec:
  rules:
    - host: objectservice.fnal.gov
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: restapi
                port:
                  name: http
